# SDL_JoystickButtonNames

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  SDL_joystickbuttonnames.c  SDL_joystickbuttonnames.h  gamecontrollerbuttondb.txt
.github/workflows/: build.yml
examples/: CMakeLists.txt  find_all_joy_buttons.c  minimal.c
examples/cmake/: FindSDL2.cmake
examples/find_all_joy_buttons_assets/: style.css
